# kubernetes-app-demo

./: .dockerignore  README.md
.github/: release.yml
.github/workflows/: build-images.yml  build-project.yml  deploy-k8s.yml  python-workflow.yml  react-workflow.yml
backend/: .gitignore  main.py  pyproject.toml
backend/app/: __init__.py  api.py  config.py
backend/app/routes/: __init__.py  health_api.py  info_api.py  user_api.py
backend/tests/: conftest.py  test_health_routes.py  test_user_routes.py  test_version_routes.py
docker/: backend.dockerfile  frontend.dockerfile
frontend/app/: package-lock.json  package.json
frontend/app/src/: App.jsx  api.jsx
frontend/app/tests/: app.test.jsx
k8s/: backend.yml  frontend.yml  services.yml
k8s/app/: kustomization.yaml
k8s/app/configuration/: backend_configmap.yaml  frontend_configmap.yaml  kustomization.yaml
k8s/app/deployments/: backend.yml  frontend.yml  kustomization.yaml
k8s/app/services/: kustomization.yaml  services.yml
k8s/environments/dev/: config-patch.yaml  kustomization.yaml
k8s/environments/prod/: kustomization.yaml
nginx_conf/: nginx.conf
