[project]
name = "backend"
version = "1.0.0"
description = "FastAPI backend"
readme = "README.md"
authors = [
    {"name" = "Ayaan Pal"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-cov"
]

[tool.pytest.ini_options]
addopts = "-v --capture=tee-sys --cov=app"